<resources>
    <string name="app_name">Salty Popcorn</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>

    <string name="prof_name">"Name:  "</string>
    <string name="prof_email">"E-mail:  "</string>
    <string name="prof_major">"Major: "</string>
    <string name="prof_interest">"Interests: "</string>
    <string name="prof_placeholder">Profile Placeholder Image</string>

    <string name="welcome">Welcome to Salty Popcorn</string>
    <string name="registration">Register Here!</string>
    <string name="login_activity">Login Here!</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_editProfile">Edit</string>

    <string name="action_search">Search</string>
    <string name="action_inTheaters">New Releases</string>
    <string name="action_newDVDs">New DVDs</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_recommendations">Recommendations</string>
    <string name="done_editing">Done Editing</string>
    <string name="Top_Movies">New on DVD</string>
    <string name="More">More</string>
    <string name="New_to_Theaters">New in Theaters</string>
    <string name="Registration">Registration</string>
    <string name="Movie_Not_Found">Movie not found</string>
    <string name="Comment">Comment</string>
    <string name="Submit">Submit</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="No_results">No Results</string>
    <string name="unlock">Locked</string>
    <string name="banned">Banned</string>
    <string name="delete">Delete</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Administrator">Administrator</string>
    <string name="AdministrationTools">Administration Tools</string>
    <string name="NoSynopsis">No synopsis.</string>
    <string name="menu_search">menu_search</string>
    <string name="sign_out">Sign out</string>
    <string name="flagged_comments">Flagged Comments</string>
    <string name="users">Users</string>
    <string name="search">Search</string>
    <string name="recommendations">Recommendations</string>
    <string name="browse_new_mov">Browse New Movies</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string-array name="majors_array">
        <item>Computer Science</item>
        <item>Computational Media</item>
        <item>Aerospace Engineering</item>
        <item>Biology</item>
        <item>Biomedical Engineering</item>
<item>Business</item>
<item>Chemical Engineering</item>
<item>Chemistry</item>
<item>Civil Engineering</item>
<item>Computer Engineering</item>
<item>Electrical Engineering</item>
<item>Environmental Engineering</item>
<item>Industrial Engineering</item>
<item>International Affairs</item>
<item>Math</item>
<item>Mechanical Engineering</item>
<item>Physics</item>
<item>Public Policy</item>
    </string-array>
    </resources>
