<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/tv_register_title"
        android:visibility="visible"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_username"
        android:layout_above="@+id/et_password"
        android:hint="@string/username"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_password"
        android:layout_above="@+id/et_confirm_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/et_confirm_pass"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_name"
        android:layout_below="@+id/et_confirm_pass"
        android:inputType="text|textNoSuggestions|textCapWords"
        android:hint="@string/name"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_email"
        android:layout_below="@+id/et_name"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:layout_below="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register" />
</RelativeLayout>