<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="#00ffffff"
        android:visibility="visible"
        android:src="@mipmap/bucket"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/grey"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prof_name"
        android:id="@+id/tV_name"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/tV_email"
        android:layout_alignLeft="@+id/tV_email"
        android:layout_alignStart="@+id/tV_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prof_email"
        android:id="@+id/tV_email"
        android:layout_above="@+id/tV_major"
        android:layout_alignLeft="@+id/tV_major"
        android:layout_alignStart="@+id/tV_major"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prof_major"
        android:id="@+id/tV_major"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/tV_interests"
        android:layout_alignLeft="@+id/tV_interests"
        android:layout_alignStart="@+id/tV_interests" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prof_interest"
        android:id="@+id/tV_interests"
        android:maxHeight="200dp"
        android:minHeight="30dp"
        android:minWidth="315dp"
        android:maxWidth="315dp"
        android:layout_above="@+id/btn_editprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/tV_username"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_editprofile"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Edit_Profile"
        android:layout_margin="20dp"/>

</RelativeLayout>