<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="200dp"
    android:layout_weight="1"
    android:layout_alignParentTop="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/profile_image"
        android:background="#00ffffff"
        android:visibility="visible"
        android:src="@mipmap/bucket"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="start"
        android:text="@string/Username"
        android:paddingBottom="2dp"
        android:id="@+id/tV_username_header"
        android:layout_alignTop="@+id/profile_image"
        android:layout_toRightOf="@+id/profile_image"
        android:layout_toEndOf="@+id/profile_image"/>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tV_email_header"
        android:gravity="start"
        android:text="@string/Email"
        android:layout_marginBottom="8dp"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_below="@+id/tV_username_header"
        android:layout_alignLeft="@+id/tV_username_header"
        android:layout_alignStart="@+id/tV_username_header"/>-->

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock"
        android:id="@+id/sw_locked"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/profile_image"
        android:paddingTop="16dp"
        android:paddingBottom="5dp"
        android:checked="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banned"
        android:id="@+id/sw_banned"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/sw_locked"
        android:layout_alignRight="@+id/sw_locked"
        android:layout_alignEnd="@+id/sw_locked"/>
</RelativeLayout>