<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/drawer_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/my_toolbar">
        </include>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="#00ffffff"
            android:visibility="visible"
            android:src="@mipmap/bucket"
            android:layout_below="@+id/my_toolbar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:minHeight="180dp"
            android:minWidth="140dp"
            android:maxHeight="180dp"
            android:maxWidth="140dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prof_name"
            android:id="@+id/tV_name"
            android:layout_marginBottom="23dp"
            android:layout_above="@+id/tV_email"
            android:layout_alignLeft="@+id/tV_email"
            android:layout_alignStart="@+id/tV_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prof_email"
            android:id="@+id/tV_email"
            android:layout_above="@+id/tV_major"
            android:layout_alignLeft="@+id/tV_major"
            android:layout_alignStart="@+id/tV_major"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prof_major"
            android:id="@+id/tV_major"
            android:layout_marginBottom="23dp"
            android:layout_above="@+id/tV_interests"
            android:layout_alignLeft="@+id/tV_interests"
            android:layout_alignStart="@+id/tV_interests" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prof_interest"
            android:id="@+id/tV_interests"
            android:maxHeight="200dp"
            android:minHeight="30dp"
            android:minWidth="315dp"
            android:maxWidth="315dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tV_username"
            android:layout_above="@+id/tV_name"
            android:layout_alignLeft="@+id/tV_name"
            android:layout_alignStart="@+id/tV_name"
            android:layout_marginBottom="33dp" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/my_header"
        app:menu="@menu/drawer"
        />
</android.support.v4.widget.DrawerLayout>